# my_little_journy

./: .gitignore  CMakeLists.txt  README.md
Testing/: TAG
Testing/20210126-1041/: Test.xml
Testing/Temporary/: LastCoverage_20210126-1041.log.tmp
algo_journey/00-init/: .complexity.c.swp  complexity.py
c/file_system/: Makefile  get_file_lines.c  stress_test.txt  test_file.txt
c_tutorial/chapter_1/: ex1-1.c  ex1-2.c  ex1-3.c  ex1-4  ex1-4.c  ex1-5  ex1-5.c
c_tutorial/experements/: double_call  double_call.c
cmake_journey/Step1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
cmake_journey/Step2/: CMakeLists.txt
cmake_journey/Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
cmake_journey/Step3/: CMakeLists.txt
cmake_journey/Step4/: CMakeLists.txt
cmake_tutorial/: CMakeLists.txt  tutorial.cxx
cmake_tutorial/math_functions/: CMakeLists.txt  matlib.cxx  matlib.hxx  ml_sqrt.cxx  ml_sqrt.hxx
computer_enchance/: CMakeLists.txt
computer_enchance/01_01_decoder/: CMakeLists.txt  main.cxx  x86_decoder.cxx  x86_decoder.hxx
computer_enchance/01_02_decoder_multiple_inst_and_suffixes/: CMakeLists.txt  main.cxx  x86_decoder.cxx  x86_decoder.hxx  x86_instruction.hxx
computer_enchance/01_03_opcode_patterns/: CMakeLists.txt  main.cxx  x86_decoder.cxx  x86_decoder.hxx
computer_enchance/01_decoder/: CMakeLists.txt  decoder.cxx  main.cxx  x86_decoder.cxx  x86_decoder.hxx
computer_enchance/02_01_haversine_input/: CMakeLists.txt  haversine.cxx  haversine.hxx  prog.cxx
cxx_journey/: .gitignore  CMakeLists.txt
cxx_journey/dice/: README.md  main.cxx  makefile
cxx_journey/learncxx/: README.md
cxx_journey/learncxx/.obsidian/: workspace.json
cxx_journey/learncxx/04-fundamental-data-types/99-summary-and-quiz/: SUMMARIZE.md  q2.cxx  q3.cxx
cxx_journey/learncxx/05-constans-and-strings/01-constan-variables/: SUMMARAIZE.md
cxx_journey/learncxx/05-constants-and-strings/01-constant-variables/: SUMMARIZE.md
cxx_journey/learncxx/05-constants-and-strings/02-constant-expression-compile-time-const-and-runtime-const/: SUMMARIZE.md
cxx_journey/learncxx/05-constants-and-strings/03-constexpr-variables/: SUMMARY.md
cxx_journey/learncxx/05-constants-and-strings/04-literals/: SUMMARY.md
cxx_journey/learncxx/05-constants-and-strings/05-numeral-systems/: SUMMARY.md
cxx_journey/learncxx/05-constants-and-strings/06-the-conditional-operator/: SUMMARY.md
cxx_journey/learncxx/05-constants-and-strings/07-inline-functions-and-variables/: SUMMARY.md
cxx_journey/learncxx/05-constants-and-strings/08-constexpr-and-consteval-functions/: SUMMARY.md
cxx_journey/learncxx/05-constants-and-strings/09-introduction-to-std-string/: SUMMARY.md
cxx_journey/learncxx/05-constants-and-strings/10-introduction-to-std-string-view/: SUMMARY.md
cxx_journey/learncxx/05-constants-and-strings/11-std-string-view/: SUMMARY.md
cxx_journey/learncxx/05-constants-and-strings/99-summary-and-quiz/: SUMMARY.md
cxx_journey/learncxx/06-operators/01-opeartor-precedence-and-associativity/: SUMMARY.md
cxx_journey/learncxx/06-operators/02-arithmetic-operators/: SUMMARY.md
cxx_journey/learncxx/06-operators/03-remainder-and-exponentiation/: SUMMARY.md
cxx_journey/learncxx/06-operators/04-increment-decrenet-operators-and-side-effects/: SUMMARY.md
cxx_journey/learncxx/06-operators/05-the-comma-operator/: SUMMARY.md  \
cxx_journey/learncxx/06-operators/06-relational-operators-and-floating-point-comparisons/: SUMMARY.md
cxx_journey/learncxx/06-operators/07-logical-opetors/: SUMMARY.md
cxx_journey/learncxx/06-operators/99-summary-and-quiz/: SUMMARY.md
cxx_journey/learncxx/07-scope-duration-and-linkage/01-compound-statemnts-bloks/: SUMMARY.md
cxx_journey/learncxx/07-scope-duration-and-linkage/02-user-defined-namepsaces-and-the-scope-resolution-operator/: SUMARY.md
cxx_journey/learncxx/07-scope-duration-and-linkage/03-local-variables/: SUMMARY.md
cxx_journey/learncxx/07-scope-duration-and-linkage/04-introduction-to-global-variables/: SUMMARY.md
cxx_journey/learncxx/07-scope-duration-and-linkage/05-variable-shdowing-name-hiding/: SUMMARY.md
cxx_journey/learncxx/07-scope-duration-and-linkage/06-internal-linkage/: SUMMARY.md
cxx_journey/learncxx/07-scope-duration-and-linkage/07-external-linkage-and-cariable-forward-declarations/: SUMMARY.md
cxx_journey/tik_tak_toe/: main.cxx  xo.cxx  xo.hxx
cxx_journey/yanl/: README.md
cxx_journey/yanl/00-beej-guide/: connect.cxx  listen.cxx  send.cxx  showip  showip.cxx
cxx_journey/yanl/src/: main.cxx
cxx_tutorial/: CMakeLists.txt  basics.cxx  header_guard_test.cxx  header_guard_test.hxx
cxx_tutorial/cxx/: CMakeLists.txt  README.md
cxx_tutorial/cxx/12-functions/: 7_lambda_intro.cxx
cxx_tutorial/cxx/12_functions/: CMakeLists.txt
cxx_tutorial/tik_tak_toe/: .#xo.cxx  CMakeLists.txt  main.cxx  xo.cxx  xo.hxx
js_journey/: README.md
js_journey/00-intro/: SUMMARY.md
js_journey/01-values-types-and-operators/: 00-prac.js  SUMARY.md
js_journey/02-program-structure/: 03-a-list.js  SUMMARY.md
js_journey/03-functions/: SUMMARY.md
missed/lecture_1/: last_modified
missed/lecture_2/: error.sh
missed_cs_semester/lecture_1/: temp
missed_cs_semester/lecture_2/: check.sh  marko  polo
missed_cs_semester/makefile/00-getting-start/: Makefile
missed_cs_semester/makefile/01-targets/: Makefile
network_programming_tutorial/: CMakeLists.txt
network_programming_tutorial/c/: CMakeLists.txt  client_main.c  cnetwork.c  cnetwork.h  main.c  server_main.c
step_1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
step_1/Testing/: TAG
step_1/Testing/20210126-1038/: Test.xml
step_1/math_functions/: CMakeLists.txt  MakeTable.cxx  mysqrt.cxx  qtsqrt.cxx  qtsqrt.hxx
tmp/: hello_c.c  hello_cxx.cxx
tutorial/: CMakeLists.txt  TutorialConfig.h.in
tutorial/Testing/Temporary/: LastCoverage_20210126-1038.log.tmp
tutorial/math_functions/: CMakeLists.txt  MakeTable.cxx  matlib.hxx
win32/mockups/mockup-layout/: Makefile
win32/mockups/mockup-listview/: 3.csv  Makefile
win32/mockups/mockup-treeview/: Makefile
(+104 files in other folders)
